test/sprtn/errors/tabs.sprtn
(let ((x 5)
   	(x 23)
      (y 5)
		  (y 23))
  x)
